fix illegal use of single quotes

--- a/Neff/MC/68830_EU_M07_01.html
+++ b/Neff/MC/68830_EU_M07_01.html
@@ -45,7 +45,7 @@
 											"choices":
 												[
 													{
-														"content": 'Energy conservation is the goal of "The Left." Energy efficiency is the goal of "The Right."',
+														"content": "Energy conservation is the goal of \"The Left.\" Energy efficiency is the goal of \"The Right.\"",
 														"answerKey": "answer1"
 													},
 													{
